--- a/index.html
+++ b/index.html
@@ -4,11 +4,44 @@
     <meta charset="utf8">
     <title>Google Code-In CSS Animation</title>
     <style>
-    
+        body {
+            padding: 0;
+            margin: 0;
+
+            /* bootstrap native font stack */
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+        }
+
+        .container {
+            display: flex;
+            height: 100vh;
+            align-items: center;
+        }
+
+        .text {
+            animation: 1s ease-in 1s slidein;
+            font-size: 64px;
+            margin: auto
+        }
+
+        @keyframes slidein {
+            from {
+                transform: scaleY(0);
+                padding-top: 150px;
+            }
+            to {
+                transform: scaleY(1);
+                padding-top: 0;
+            }
+        }
     </style>
 </head>
 
 <body>
-
+<div class="container">
+    <div class="text">
+        Hello, World!
+    </div>
+</div>
 </body>
 </html>
