Removed unnecessary dealy

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         }
 
         .text {
-            animation: 1s ease-in 1s slidein;
+            animation: 1s ease-in slidein;
             font-size: 64px;
             margin: auto
         }
